Add Java Download/Draco/Rotate. NodeJS Primary, Fallback to Java.
Introduces AssimpDracoDecode.java for GLB decoding and rotation using LWJGL Assimp/Draco, with origin support and strict node-parity baking. Updates TileDownloader to prefer Node.js pipeline with fallback to Java/Assimp, adds concurrency, translation mapping, and refactors for robustness. Updates pom.xml to add LWJGL, Assimp, and Jackson dependencies, fixes shade relocations, and configures native library handling for cross-platform support.